linkedIn, >> >> hasnode & instagram link added to word count app

--- a/js-projects/04-word-count-app/index.html
+++ b/js-projects/04-word-count-app/index.html
@@ -1,32 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/responsive.css">
-    <link rel="stylesheet" href="./countword.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/responsive.css" />
+    <link rel="stylesheet" href="./countword.css" />
     <title>Word Count App</title>
-</head>
-<body class="text-indigo-600 bg-indigo-200">
+  </head>
+  <body class="text-indigo-600 bg-indigo-200">
     <div class="p-4 flex flex-row">
-        <a href="../../index.html">
-            <img src="../images/house-solid.svg" alt="home" class="w-6 h-6 mr-2 cursor-pointer">
-        </a>
-        <a href="https://github.com/Torjuman/javascript-mini-projects-iNeuron-fsjs2022/tree/main/js-projects/04-word-count-app"
-            target="_blank" rel="noopener noreferrer">
-            <img src="../images/github.svg" alt="github" class="w-6 h-6 ml-2 cursor-pointer">
-        </a>
+      <a href="../../index.html">
+        <img
+          src="../images/house-solid.svg"
+          alt="home"
+          class="w-6 h-6 mr-2 cursor-pointer"
+        />
+      </a>
+      <a
+        href="https://github.com/Torjuman/javascript-mini-projects-iNeuron-fsjs2022/tree/main/js-projects/04-word-count-app"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <img
+          src="../images/github.svg"
+          alt="github"
+          class="w-6 h-6 ml-2 cursor-pointer"
+        />
+      </a>
+      <a
+        href="https://www.linkedin.com/in/torjuman-rimon-a3a169176/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <img
+          src="../images/linkedin.svg"
+          alt="linkedin"
+          class="w-6 h-6 ml-2 cursor-pointer"
+        />
+      </a>
+      <a
+        href="https://www.instagram.com/rimontorjuman/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <img
+          src="../images/instagram.svg"
+          alt="instagram"
+          class="w-6 h-6 ml-2 cursor-pointer"
+        />
+      </a>
+      <a
+        href="https://hashnode.com/@torjuman"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <img
+          src="../images/hashnode.svg"
+          alt="hashnode"
+          class="w-6 h-6 ml-2 cursor-pointer"
+        />
+      </a>
     </div>
     <h1 class="text-5xl font-medium text-center">Word Counter App</h1>
-    <div class="container mx-auto w-full h-v-70 flex flex-col items-center justify-center"> 
-        <p class="text-xl mb-5">Word(s) : <span id="words-number-dispaly">0</span></p>
-        <textarea class="rounded-lg shadow-indigo-34 p-2" id="textarea-box" cols="50" rows="10" ></textarea>
-        <button class="flex w-100px py-2 mt-5 font-medium bg-indigo-200 rounded-lg shadow-indigo-4 justify-center hover:stop" id="clear-all">Clear all</button>
+    <div
+      class="container mx-auto w-full h-v-70 flex flex-col items-center justify-center"
+    >
+      <p class="text-xl mb-5">
+        Word(s) : <span id="words-number-dispaly">0</span>
+      </p>
+      <textarea
+        class="rounded-lg shadow-indigo-34 p-2"
+        id="textarea-box"
+        cols="50"
+        rows="10"
+      ></textarea>
+      <button
+        class="flex w-100px py-2 mt-5 font-medium bg-indigo-200 rounded-lg shadow-indigo-4 justify-center hover:stop"
+        id="clear-all"
+      >
+        Clear all
+      </button>
     </div>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
