basic setup to expense tracker

--- a/index.html
+++ b/index.html
@@ -509,8 +509,9 @@
                   expenses incurred by them.
                 </p>
                 <a
+                  href="./js-projects/10-expense-tracker/index.html"
                   class="mt-3 text-lime-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
