--- a/index.html
+++ b/index.html
@@ -561,8 +561,9 @@
                   clicked on two identical photos.
                 </p>
                 <a
+                  href="./js-projects/11-memory-card-game/index.html"
                   class="mt-3 text-blue-600 font-medium inline-flex items-center cursor-pointer"
-                  >Coming Soon...
+                  >Watch Now
                   <svg
                     fill="none"
                     stroke="currentColor"
